More on description

--- a/rolandomesa-ng/src/app/app.component.html
+++ b/rolandomesa-ng/src/app/app.component.html
@@ -228,7 +228,7 @@
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
       <h2>Weather forecast registries count:</h2>
-      <p>{{registries}}</p>
+      <h3>{{registries}}</h3>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
